--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "plerdy",
   "source": "src/index.html",
-  "homepage": ".",
+  "homepage": "https://maxim-gumeniuk.github.io/test-plerdy/",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
@@ -22,9 +21,12 @@
     "dev": "parcel ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "parcel src/index.html --open --port 4000",
-    "start": "parcel serve src/index.html --public-url / --dist-dir dist",
-    "build": "parcel build src/index.html",
+    "start": "parcel",
+    "build": "parcel build",
     "deploy": "gh-pages -d dist"
+  },
+  "targets": {
+    "main": false
   },
   "author": "",
   "license": "ISC"
